<resources>
    <string name="app_name">KDnDApp</string>
    <string name="title_activity_char">CharActivity</string>
    <string name="title_activity_show_info">ShowInfoActivity</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

    <string name="err">Error</string>
    <string name="err_init">Error to initialize application</string>

    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="plus1">+1</string>
    <string name="minus1">-1</string>
    <string name="plus10">+10</string>
    <string name="minus10">-10</string>
    <string name="plus100">+100</string>
    <string name="minus100">-100</string>
    <string name="plus1000">+1000</string>
    <string name="minus1000">-1000</string>

</resources>