<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDialogHp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical"
    android:padding="@dimen/dialogPadding">

    <TextView
        android:id="@+id/textXpTitle"
        style="@style/text_title"
        android:layout_marginBottom="@dimen/controlMarginV"
        tools:text="Agregar experiencia" />

    <TextView
        android:id="@+id/textXpValue"
        style="@style/edit_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/controlMarginV"
        android:textAlignment="viewEnd"
        android:textStyle="bold"
        tools:text="0" />

    <LinearLayout
        android:id="@+id/layoutXp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:id="@+id/layoutXpDec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dialogMargins"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <com.mlf.kdndapp.ui.theme.PushButton
                android:id="@+id/butXpDec1000"
                style="@style/but_brown_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/butChangeH"
                android:layout_marginVertical="@dimen/controlMarginV"
                android:text="@string/minus1000"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

            <com.mlf.kdndapp.ui.theme.PushButton
                android:id="@+id/butXpDec100"
                style="@style/but_brown_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/butChangeH"
                android:layout_marginVertical="@dimen/controlMarginV"
                android:text="@string/minus100"
                tools:ignore="DuplicateSpeakableTextCheck,TextViewEdits,TouchTargetSizeCheck" />

            <com.mlf.kdndapp.ui.theme.PushButton
                android:id="@+id/butXpDec10"
                style="@style/but_brown_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/butChangeH"
                android:layout_marginVertical="@dimen/controlMarginV"
                android:text="@string/minus10"
                tools:ignore="DuplicateSpeakableTextCheck,TextViewEdits,TouchTargetSizeCheck" />

            <com.mlf.kdndapp.ui.theme.PushButton
                android:id="@+id/butXpDec1"
                style="@style/but_brown_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/butChangeH"
                android:layout_marginVertical="@dimen/controlMarginV"
                android:text="@string/minus1"
                tools:ignore="DuplicateSpeakableTextCheck,TextViewEdits,TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutXpInc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialogMargins"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <com.mlf.kdndapp.ui.theme.PushButton
                android:id="@+id/butXpInc1000"
                style="@style/but_brown_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/butChangeH"
                android:layout_marginVertical="@dimen/controlMarginV"
                android:text="@string/plus1000"
                tools:ignore="DuplicateSpeakableTextCheck,TextViewEdits,TouchTargetSizeCheck" />

            <com.mlf.kdndapp.ui.theme.PushButton
                android:id="@+id/butXpInc100"
                style="@style/but_brown_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/butChangeH"
                android:layout_marginVertical="@dimen/controlMarginV"
                android:text="@string/plus100"
                tools:ignore="DuplicateSpeakableTextCheck,TextViewEdits,TouchTargetSizeCheck" />

            <com.mlf.kdndapp.ui.theme.PushButton
                android:id="@+id/butXpInc10"
                style="@style/but_brown_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/butChangeH"
                android:layout_marginVertical="@dimen/controlMarginV"
                android:text="@string/plus10"
                tools:ignore="DuplicateSpeakableTextCheck,TextViewEdits,TouchTargetSizeCheck" />

            <com.mlf.kdndapp.ui.theme.PushButton
                android:id="@+id/butXpInc1"
                style="@style/but_brown_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/butChangeH"
                android:layout_marginVertical="@dimen/controlMarginV"
                android:text="@string/plus1"
                tools:ignore="DuplicateSpeakableTextCheck,TextViewEdits,TouchTargetSizeCheck" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dialogPadding"
        android:gravity="end">

        <Button
            android:id="@+id/butXpOk"
            style="@style/but_brown_style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/butDialogH"
            android:layout_margin="@dimen/dialogMargins"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="Agregar" />

        <Button
            android:id="@+id/butXpCancel"
            style="@style/but_brown_style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/butDialogH"
            android:layout_margin="@dimen/dialogMargins"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="Cancelar" />
    </LinearLayout>

</LinearLayout>