<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical"
    android:padding="@dimen/dialogPadding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioCoinsPlatinum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imageCoinsPlatinum"
            android:layout_width="@dimen/butChangeH"
            android:layout_height="@dimen/butChangeW"
            android:src="@drawable/coin_platinum" />

        <TextView
            android:id="@+id/textCoinsPlatinum"
            style="@style/edit_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textStyle="bold"
            tools:text="0" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textNormalFace"
        android:textSize="@dimen/fontLarge"
        android:textStyle="bold"
        tools:text="Agregar o quitar monedas" />

    <EditText
        android:id="@+id/editTextNumber"
        style="@style/edit_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dialogMargins"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="viewEnd"
        android:textStyle="bold"
        tools:text="0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            style="@style/edit_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button"
                    style="@style/but_brown_style"
                    android:layout_width="@dimen/butChangeCantW"
                    android:layout_height="@dimen/butChangeH"
                    android:text="@string/minus1" />

                <Button
                    android:id="@+id/button2"
                    style="@style/but_brown_style"
                    android:layout_width="@dimen/butChangeCantW"
                    android:layout_height="@dimen/butChangeH"
                    android:text="@string/minus10" />

                <Button
                    android:id="@+id/button3"
                    style="@style/but_brown_style"
                    android:layout_width="@dimen/butChangeCantW"
                    android:layout_height="@dimen/butChangeH"
                    android:text="@string/minus100" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button"
                    style="@style/but_brown_style"
                    android:layout_width="@dimen/butChangeCantW"
                    android:layout_height="@dimen/butChangeH"
                    tools:text="@string/plus1" />

                <Button
                    android:id="@+id/button2"
                    style="@style/but_brown_style"
                    android:layout_width="@dimen/butChangeCantW"
                    android:layout_height="@dimen/butChangeH"
                    tools:text="@string/plus10" />

                <Button
                    android:id="@+id/button4"
                    style="@style/but_brown_style"
                    android:layout_width="@dimen/butChangeCantW"
                    android:layout_height="@dimen/butChangeH"
                    android:text="@string/plus100" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>