<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDialogNum"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutNumTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dialogMargins"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dialogPadding"
        android:paddingTop="@dimen/dialogPadding"
        android:paddingEnd="@dimen/dialogPadding">

        <TextView
            android:id="@+id/textNumTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:textColor="@color/textNormalFace"
            android:textSize="@dimen/fontLarge"
            android:textStyle="bold"
            tools:text="Nivel" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutNumChange"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dialogPadding">

        <com.mlf.kdndapp.ui.theme.PushButton
            android:id="@+id/butNumDec"
            style="@style/but_brown_style"
            android:layout_width="@dimen/butChangeW"
            android:layout_height="@dimen/butChangeH"
            android:layout_margin="@dimen/dialogMargins"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textNumValue"
            style="@style/edit_style"
            android:layout_width="@dimen/editDialogW"
            android:layout_height="@dimen/editDialogH"
            android:layout_margin="@dimen/dialogMargins"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            tools:text="1" />

        <com.mlf.kdndapp.ui.theme.PushButton
            android:id="@+id/butNumInc"
            style="@style/but_brown_style"
            android:layout_width="@dimen/butChangeW"
            android:layout_height="@dimen/butChangeH"
            android:layout_margin="@dimen/dialogMargins"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutNumButtons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:padding="@dimen/dialogPadding">

        <Button
            android:id="@+id/butNumOk"
            style="@style/but_brown_style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/butChangeH"
            android:layout_margin="@dimen/dialogMargins"
            android:text="@string/ok"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/butNumCancel"
            style="@style/but_brown_style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/butChangeH"
            android:layout_margin="@dimen/dialogMargins"
            android:text="@string/cancel"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</LinearLayout>