<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDialogHp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical"
    android:padding="@dimen/dialogPadding">

    <TextView
        android:id="@+id/textHpTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/controlMarginV"
        android:layout_weight="1"
        android:textAlignment="viewStart"
        android:textColor="@color/textNormalFace"
        android:textSize="@dimen/fontLarge"
        android:textStyle="bold"
        tools:text="Puntos de golpe" />

    <LinearLayout
        android:id="@+id/layoutHpCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layoutHpCurrentChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.mlf.kdndapp.ui.theme.PushButton
                android:id="@+id/butHpCurrentDec"
                style="@style/but_brown_style"
                android:layout_width="@dimen/butChangeW"
                android:layout_height="@dimen/butChangeH"
                android:text="@string/minus"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textHpCurrent"
                style="@style/edit_style"
                android:layout_width="@dimen/editDialogW"
                android:layout_height="@dimen/editDialogH"
                android:layout_marginHorizontal="@dimen/dialogMargins"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                tools:text="1" />

            <com.mlf.kdndapp.ui.theme.PushButton
                android:id="@+id/butHpCurrentInc"
                style="@style/but_brown_style"
                android:layout_width="@dimen/butChangeW"
                android:layout_height="@dimen/butChangeH"
                android:text="@string/plus"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/textHpCurrentDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialogPadding"
            android:textAlignment="viewStart"
            android:textColor="@color/textNormalFace"
            android:textSize="@dimen/fontNormal"
            android:textStyle="bold"
            tools:text="Actuales" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutHpMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dialogMargins"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layoutHpMaxChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.mlf.kdndapp.ui.theme.PushButton
                android:id="@+id/butHpMaxDec"
                style="@style/but_brown_style"
                android:layout_width="@dimen/butChangeW"
                android:layout_height="@dimen/butChangeH"
                android:text="@string/minus"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textHpMax"
                style="@style/edit_style"
                android:layout_width="@dimen/editDialogW"
                android:layout_height="@dimen/editDialogH"
                android:layout_marginHorizontal="@dimen/dialogMargins"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                tools:text="1" />

            <com.mlf.kdndapp.ui.theme.PushButton
                android:id="@+id/butHpMaxInc"
                style="@style/but_brown_style"
                android:layout_width="@dimen/butChangeW"
                android:layout_height="@dimen/butChangeH"
                android:text="@string/plus"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/textHpMaxDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialogPadding"
            android:textAlignment="viewStart"
            android:textColor="@color/textNormalFace"
            android:textSize="@dimen/fontNormal"
            android:textStyle="bold"
            tools:text="Máximos" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutHpTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layoutHpTempChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.mlf.kdndapp.ui.theme.PushButton
                android:id="@+id/butHpTempDec"
                style="@style/but_brown_style"
                android:layout_width="@dimen/butChangeW"
                android:layout_height="@dimen/butChangeH"
                android:text="@string/minus"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textHpTemp"
                style="@style/edit_style"
                android:layout_width="@dimen/editDialogW"
                android:layout_height="@dimen/editDialogH"
                android:layout_marginHorizontal="@dimen/dialogMargins"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                tools:text="1" />

            <com.mlf.kdndapp.ui.theme.PushButton
                android:id="@+id/butHpTempInc"
                style="@style/but_brown_style"
                android:layout_width="@dimen/butChangeW"
                android:layout_height="@dimen/butChangeH"
                android:text="@string/plus"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/textHpTempDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialogPadding"
            android:textAlignment="viewStart"
            android:textColor="@color/textNormalFace"
            android:textSize="@dimen/fontNormal"
            android:textStyle="bold"
            tools:text="Temporales" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dialogPadding"
        android:gravity="end">

        <Button
            android:id="@+id/butHpOk"
            style="@style/but_brown_style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/butDialogH"
            android:layout_margin="@dimen/dialogMargins"
            android:text="@string/ok"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/butHpCancel"
            style="@style/but_brown_style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/butDialogH"
            android:layout_margin="@dimen/dialogMargins"
            android:text="@string/cancel"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</LinearLayout>